@@ -4,17 +4,17 @@ import com.market.DatabaseManager;
 
 import java.sql.SQLException;
 import com.google.gson.JsonParser;
-import java.time.LocalDate;
 import io.github.cdimascio.dotenv.Dotenv;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
+import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Semaphore;
 import java.net.http.*;
 import java.time.*;
 
-public class HistoricalService {
-    private static final Logger log = LoggerFactory.getLogger(HistoricalService.class);
+import static java.lang.Long.parseLong;
 
+public class HistoricalService {
     // desired range for
     public static class Range {
         public int multiplier;
@@ -28,24 +28,9 @@ public class HistoricalService {
             this.from = from;
             this.to = to;
         }
-        /* might be useful idk
-        public Range lastSpans(Timespan timespan, int multiplier, int spansBack) {
-            if (spansBack < 1) spansBack = 1;
-            LocalDate todayUtc = java.time.Instant.ofEpochMilli(System.currentTimeMillis())
-                    .atZone(java.time.ZoneOffset.UTC).toLocalDate();
-            int spanMinutes = switch(timespan) {
-                case MINUTE -> 1;
-                case HOUR   -> 60;
-                case DAY    -> 1440;
-            };
-            long totalMinutes = (long) spansBack * (long) multiplier * (long) spanMinutes;
-            int backDays = (int) ((totalMinutes + 1440 - 1) / 1440);
-            LocalDate from = todayUtc.minusDays(backDays);
-            return new Range(timespan, multiplier, from, todayUtc);
-        }
-         */
     }
 
+    // not really useful anymore since we're storing everything in the day range
     public enum Timespan {
         MINUTE("minute"),
         HOUR("hour"),
@@ -59,6 +44,15 @@ public class HistoricalService {
     private final HttpClient http;
     private final String apiKey;
     private final String baseUrl;
+
+    // ensure only one caller can backfill
+    private static final ConcurrentHashMap<String, Object> KEY_LOCKS = new ConcurrentHashMap<>();
+    private static final ConcurrentHashMap<String, Boolean> IN_FLIGHT = new ConcurrentHashMap<>();
+    private static String key(String s, Range r){ return s+"|"+r.multiplier+"|"+r.timespan.token; }
+
+    // rate limiter - for acquiring tokens
+    private static final Semaphore TOKENS = new Semaphore(1);
+    private static long last = System.nanoTime();
 
     public HistoricalService(DatabaseManager db) {
         this(db, HttpClient.newHttpClient(), System.getenv("POLYGON_API_KEY"),
@@ -77,31 +71,16 @@ public class HistoricalService {
         this.apiKey = k;
     }
 
-    Range ensureRange(String symbol, Range requested) throws SQLException {
-        LocalDate todayUtc = java.time.Instant.ofEpochMilli(System.currentTimeMillis())
-                .atZone(java.time.ZoneOffset.UTC).toLocalDate();
+    public Range ensureRange(String symbol, Range requested) throws SQLException {
+        LocalDate todayUtc = Instant.ofEpochMilli(System.currentTimeMillis())
+                .atZone(ZoneOffset.UTC).toLocalDate();
 
         LocalDate reqTo = (requested.to == null || requested.to.isAfter(todayUtc)) ? todayUtc : requested.to;
         LocalDate reqFrom = (requested.from == null) ? reqTo : requested.from;
 
-        if (requested.timespan == Timespan.DAY) {
-            reqTo = reqTo.minusDays(1);
-            // nudge weekends to previous friday
-            if (reqTo.getDayOfWeek() == java.time.DayOfWeek.SATURDAY) reqTo = reqTo.minusDays(1);
-            if (reqTo.getDayOfWeek() == java.time.DayOfWeek.SUNDAY)   reqTo = reqTo.minusDays(2);
-        } else {
-            // HOUR/MINUTE: clamp "to" to the previous trading day so we don't request weekends
-            reqTo = prevTradingDay(reqTo);
-            // And bump "from" forward if it starts on a weekend
-            reqFrom = nextTradingDay(reqFrom);
-            // Safety: if the range collapses (e.g., from==to and it's still weekend), expand a bit
-            if (reqFrom.isAfter(reqTo)) {
-                // heuristics: for 1W hour-bars it's reasonable to pull the last 5 trading days
-                reqTo = prevTradingDay(todayUtc);
-                reqFrom = reqTo.minusDays(7);
-                reqFrom = nextTradingDay(reqFrom);
-            }
-        }
+        requested.timespan = Timespan.DAY;
+
+        reqTo = prevTradingDay(reqTo.minusDays(1));
 
         if (reqTo.isBefore(reqFrom)) return null;
 
@@ -109,32 +88,44 @@ public class HistoricalService {
         long earliestMs = db.getEarliestTimestamp(symbol, requested.multiplier, requested.timespan.token);
 
         if (latestMs == 0L || earliestMs == 0L) {
-            // no data yet for this symbol/timeframe: fetch the whole requested window
+            System.out.printf("[HS.ensureRange] No data for %s %d/%s; fetching %s - %s%n",
+                    symbol, requested.multiplier, requested.timespan, reqFrom, reqTo);
             return new Range(requested.timespan, requested.multiplier, reqFrom, reqTo);
         }
 
-        LocalDate haveLatest = java.time.Instant.ofEpochMilli(latestMs).atZone(java.time.ZoneOffset.UTC).toLocalDate();
-        LocalDate haveEarliest = java.time.Instant.ofEpochMilli(earliestMs).atZone(java.time.ZoneOffset.UTC).toLocalDate();
+        LocalDate haveLatest = Instant.ofEpochMilli(latestMs).atZone(ZoneOffset.UTC).toLocalDate();
+        LocalDate haveEarliest = Instant.ofEpochMilli(earliestMs).atZone(ZoneOffset.UTC).toLocalDate();
 
-        // forward fill
-        LocalDate forwardFrom = haveLatest.plusDays(1);
+        // forward fill (newer data missing)
+        LocalDate forwardFrom = nextTradingDay(haveLatest.plusDays(1));
         if (!forwardFrom.isAfter(reqTo)) {
             LocalDate from = (reqFrom.isAfter(forwardFrom)) ? reqFrom : forwardFrom;
-            if (!reqTo.isBefore(from)) return new Range(requested.timespan, requested.multiplier, from, reqTo);
+            if (!reqTo.isBefore(from)) {
+                System.out.printf("[HS.ensureRange] Forward fill %s %d/%s; fetching %s - %s%n",
+                        symbol, requested.multiplier, requested.timespan, from, reqTo);
+                return new Range(requested.timespan, requested.multiplier, from, reqTo);
+            }
         }
 
-        // backfill (if there's older data missing)
-        LocalDate backfillTo = haveEarliest.minusDays(1);
+        // backfill (older data missing)
+        LocalDate backfillTo = prevTradingDay(haveEarliest.minusDays(1));
         if (!reqFrom.isAfter(backfillTo)) {
             LocalDate to = (reqTo.isBefore(backfillTo)) ? reqTo : backfillTo;
-            if (!to.isBefore(reqFrom)) return new Range(requested.timespan, requested.multiplier, reqFrom, to);
+            if (!to.isBefore(reqFrom)) {
+                System.out.printf("[HS.ensureRange] Backfill %s %d/%s; fetching %s - %s%n",
+                        symbol, requested.multiplier, requested.timespan, reqFrom, to);
+                return new Range(requested.timespan, requested.multiplier, reqFrom, to);
+            }
         }
 
-        // if there's a hole (may be null if none found)
+        // if there's a hole (null if none found)
         Range hole = findInteriorHole(symbol, new Range(requested.timespan, requested.multiplier, reqFrom, reqTo));
+        if (hole != null) System.out.printf("[HS.ensureRange] Hole fill %s %d/%s; fetching %s - %s%n",
+                symbol, requested.multiplier, requested.timespan, hole.from, hole.to);
 
         return hole;
     }
+
     /* format url string for candles */
     private String buildCandlesUrl(String symbol, int multiplier, Timespan timespan,
                                    LocalDate from, LocalDate to) {
@@ -144,23 +135,59 @@ public class HistoricalService {
         );
     }
 
+    public int backfillRange(String symbol, Range requested) throws Exception {
+        String k = key(symbol, requested);
+        Object lock = KEY_LOCKS.computeIfAbsent(k, s -> new Object());
+        synchronized (lock) {
+            if (Boolean.TRUE.equals(IN_FLIGHT.putIfAbsent(k, true))) return 0;
+            try {
+                return doBackfillRange(symbol, requested); // extract existing logic into this
+            } finally { IN_FLIGHT.remove(k); }
+        }
+    }
+
     /**
      * pulls range in chunks, parses polygon json, and batch-inserts
      * @param symbol the symbol to fetch
      * @param requested requested range (ensured valid)
      * @throws Exception throws if status code != 200
      */
-    public int backfillRange(String symbol, Range requested) throws Exception {
-        final int MAX_PASSES = 6;  // enough to cover: forward, backward, and multiple holes
+    public int doBackfillRange(String symbol, Range requested) throws Exception {
+        final int MAX_PASSES = 6; // enough to cover: forward, backward, and multiple holes
         int totalInsertedAll = 0;
 
+        Range prevRange = null;
+
         for (int pass = 1; pass <= MAX_PASSES; pass++) {
-            Range range = ensureRange(symbol, requested);
+            Range range;
+            if (pass == 1) {
+                range = requested;
+            } else {
+                range = ensureRange(symbol, requested);
+            }
+
+            if (range == null) {
+                System.out.printf("[HS.backfillRange] ensureRange returned NULL for %s %d/%s (req=%s - %s)%n",
+                        symbol, requested.multiplier, requested.timespan, requested.from, requested.to);
+            } else {
+                System.out.printf("[HS.backfillRange] ensureRange returned %s - %s%n", range.from, range.to);
+            }
+
             if (range == null || range.to.isBefore(range.from)) {
-                System.out.printf("[HistoricalService] Covered %s %d/%s after %d pass(es), totalInserted=%d%n",
-                        symbol, requested.multiplier, requested.timespan, (pass - 1), totalInsertedAll);
+                System.out.printf("[HS.backfillRange] Covered %s %d/%s after %d pass%s, totalInserted=%d%n",
+                        symbol, requested.multiplier, requested.timespan, (pass - 1), (pass - 1) == 1 ? "" : "es", totalInsertedAll);
                 break;
             }
+
+            // if ensureRange keeps returning the same span but we didn't insert anything last time, stop
+            if (prevRange != null
+                    && prevRange.from.equals(range.from)
+                    && prevRange.to.equals(range.to)) {
+                System.out.printf("[HS.backfillRange] Same range returned twice; stopping. %s %d/%s %s - %s%n",
+                        symbol, range.multiplier, range.timespan, range.from, range.to);
+                break;
+            }
+            prevRange = range;
 
             final int maxChunkDays = switch (range.timespan) {
                 case DAY    -> 30;
@@ -168,7 +195,7 @@ public class HistoricalService {
                 case MINUTE -> 7;
             };
 
-            System.out.printf("[HistoricalService] Pass %d: fetching %s %d/%s %s→%s%n",
+            System.out.printf("[HS.backfillRange] Pass %d: fetching %s %d/%s %s - %s%n",
                     pass, symbol, range.multiplier, range.timespan, range.from, range.to);
 
             int totalInsertedThisPass = 0;
@@ -178,40 +205,48 @@ public class HistoricalService {
                 LocalDate chunkEnd = cursor.plusDays(maxChunkDays - 1);
 
                 LocalDate reqStart = nextTradingDay(cursor);
-                LocalDate reqEnd   = prevTradingDay(chunkEnd);
+                LocalDate reqEnd = prevTradingDay(chunkEnd);
 
                 if (reqEnd.isBefore(reqStart)) {
+                    System.out.printf("[HS.chunk] skip empty window (cursor=%s chunkEnd=%s reqStart=%s reqEnd=%s)%n",
+                            cursor, chunkEnd, reqStart, reqEnd);
                     cursor = chunkEnd.plusDays(1);
                     continue;
                 }
 
-                String url = buildCandlesUrl(symbol, range.multiplier, range.timespan, cursor, chunkEnd);
+                String url = buildCandlesUrl(symbol, range.multiplier, range.timespan, reqStart, reqEnd);
 
-                int attempts = 0;
-                while (true) {
-                    attempts++;
-                    var req = java.net.http.HttpRequest.newBuilder(java.net.URI.create(url)).GET().build();
-                    var resp = http.send(req, java.net.http.HttpResponse.BodyHandlers.ofString());
+                int attempts;
+                for (attempts = 1; ; attempts++) {
+                    var req = HttpRequest.newBuilder(java.net.URI.create(url)).GET().build();
+
+                    // request only when you have a token (for rate limit, ~5/min)
+                    acquireToken();
+
+                    var resp = http.send(req, HttpResponse.BodyHandlers.ofString());
                     int sc = resp.statusCode();
 
                     if (sc == 429) {
-                        System.out.println("[HistoricalService] 429 rate limit; backing off for a moment...");
-                        Thread.sleep(15000L * attempts); // light backoff
+                        long base = parseLong(resp.headers().firstValue("Retry-After").orElse("5"), 5) * 1000L;
+                        long sleepMs = (long)(base * Math.pow(1.8, attempts-1) + (Math.random()*250));
+                        System.out.printf("[HS.chunk] 429 rate limit for %s %s - %s; sleeping %dms (attempt %d)%n",
+                                symbol, reqStart, reqEnd, sleepMs, attempts);
+                        Thread.sleep(sleepMs);
                         if (attempts < 3) continue; // retry a couple of times <3
-                        System.out.println("[HistoricalService] giving up on this chunk due to 429");
-                        break; // break the retry loop; advance to next chunk (hole will be found later)
+                        Thread.sleep(sleepMs); // cool-off before next chunk
+                        System.out.println("[HS.chunk] giving up on this chunk due to 429");
+                        break;
                     }
                     if (sc != 200) {
-                        throw new RuntimeException("[HistoricalService] " + sc + " " + resp.body());
+                        throw new RuntimeException("[HS.chunk] " + sc + " " + resp.body());
                     }
 
                     var root = JsonParser.parseString(resp.body()).getAsJsonObject();
                     String status = root.has("status") ? root.get("status").getAsString() : "(missing)";
                     if (!"OK".equals(status)) {
                         String err = root.has("error") ? root.get("error").getAsString() : "(none)";
-                        System.out.printf("[HistoricalService] status=%s error=%s for %s %s→%s%n",
+                        System.out.printf("[HS.chunk] status=%s error=%s for %s %s - %s%n",
                                 status, err, symbol, cursor, chunkEnd);
-                        // DELAYED/empty: just skip this chunk; if rows exist below, we still insert them
                     }
 
                     var rows = new java.util.ArrayList<DatabaseManager.CandleData>();
@@ -232,66 +267,71 @@ public class HistoricalService {
                         db.insertCandlesBatch(symbol, range.multiplier, range.timespan.token, rows);
                         totalInsertedThisPass += rows.size();
                         totalInsertedAll += rows.size();
-                        System.out.printf("[HistoricalService] Inserted %d rows for %s %s→%s (passTotal=%d, all=%d)%n",
+                        System.out.printf("[HS.chunk] Inserted %d rows for %s %s - %s (passTotal=%d, all=%d)%n",
                                 rows.size(), symbol, cursor, chunkEnd, totalInsertedThisPass, totalInsertedAll);
                     } else {
-                        System.out.printf("[HistoricalService] No rows for %s %s→%s%n", symbol, cursor, chunkEnd);
-                        Thread.sleep(100);
+                        System.out.printf("[HS.chunk] No rows for %s %s - %s%n", symbol, cursor, chunkEnd);
                     }
-                    break; // exit retry loop on 200 (whatever the status text)
+                    break; // success, exit retry loop
                 }
 
-                // be nicer to the API
+                // be nicer to the API between chunks
                 try { Thread.sleep(400); } catch (InterruptedException ignore) {}
 
-                cursor = chunkEnd.plusDays(1);
+                cursor = reqEnd.plusDays(1);
+            }
+
+            // if this pass did nothing, there's probably nothing left (or we’re rate-limited)
+            if (totalInsertedThisPass == 0) {
+                System.out.printf("[HS.backfillRange] Pass %d inserted 0 rows; stopping early%n", pass);
+                break;
             }
         }
+        System.out.println("[HistoricalService] Done.");
         return totalInsertedAll;
     }
 
-    /** Count trading days (Mon–Fri) strictly between a and b, assuming a <= b. */
-    private static int businessDaysBetween(LocalDate a, LocalDate b) {
-        int days = 0;
-        LocalDate d = a.plusDays(1);
-        while (!d.isAfter(b.minusDays(1))) {
-            if (!isWeekend(d)) days++;
-            d = d.plusDays(1);
+    private static void acquireToken() throws InterruptedException {
+        // refill token every 12s (polygon free tier is 5 calls/minute)
+        while (true) {
+            long now = System.nanoTime();
+            long elapsedMs = java.util.concurrent.TimeUnit.NANOSECONDS.toMillis(now - last);
+            if (elapsedMs >= 12000 && TOKENS.availablePermits() == 0) {
+                TOKENS.release();
+                last = now;
+            }
+            if (TOKENS.tryAcquire()) return;
+            Thread.sleep(100);
         }
-        return Math.max(0, days);
     }
 
-    /** If there is a real trading-day hole inside [from..to], return that subrange (inclusive). Else null. */
+    /* search for subrange in case there's an interior hole */
     private Range findInteriorHole(String symbol, Range req) throws SQLException {
         long startMs = req.from.atStartOfDay(ZoneOffset.UTC).toInstant().toEpochMilli();
-        long endMs   = req.to.atTime(23,59,59).toInstant(ZoneOffset.UTC).toEpochMilli();
+        long endMs = req.to.atTime(23,59,59).toInstant(ZoneOffset.UTC).toEpochMilli();
 
         var ts = db.listTimestamps(symbol, req.multiplier, req.timespan.token, startMs, endMs);
         if (ts.isEmpty()) {
-            // nothing in window — just fetch it all
+            // nothing in window, just fetch everything
             return new Range(req.timespan, req.multiplier, req.from, req.to);
         }
 
-        // We’ll detect holes using dates (UTC) at the day granularity,
-        // even for HOUR/MINUTE, which is fine: we backfill full-day spans.
-        LocalDate prevDate = Instant.ofEpochMilli(ts.get(0)).atZone(ZoneOffset.UTC).toLocalDate();
+        LocalDate prevDate = Instant.ofEpochMilli(ts.getFirst()).atZone(ZoneOffset.UTC).toLocalDate();
 
         for (int i = 1; i < ts.size(); i++) {
             LocalDate currDate = Instant.ofEpochMilli(ts.get(i)).atZone(ZoneOffset.UTC).toLocalDate();
 
             int missingTradingDays = businessDaysBetween(prevDate, currDate);
             if (missingTradingDays >= 1) {
-                // Bound the hole to trading days only
-                LocalDate holeFrom = nextTradingDay(prevDate);
-                LocalDate holeTo   = prevTradingDay(currDate);
+                LocalDate holeStart = nextTradingDay(prevDate);
+                LocalDate holeEnd = prevTradingDay(currDate);
 
-                // Constrain to the requested window
-                if (holeFrom.isBefore(req.from)) holeFrom = req.from;
-                if (holeTo.isAfter(req.to))       holeTo   = req.to;
+                if (holeStart.isBefore(req.from)) holeStart = req.from;
+                if (holeEnd.isAfter(req.to)) holeEnd = req.to;
 
-                // Skip if it collapses (e.g., weekend-only)
-                if (!holeTo.isBefore(holeFrom)) {
-                    return new Range(req.timespan, req.multiplier, holeFrom, holeTo);
+                if (!holeEnd.isBefore(holeStart)) {
+                    // System.out.printf("[HS.findInteriorHole] holeFrom = %s, holeTo = %s%n", holeStart, holeEnd);
+                    return new Range(req.timespan, req.multiplier, holeStart, holeEnd);
                 }
             }
             prevDate = currDate;
@@ -299,17 +339,86 @@ public class HistoricalService {
         return null;
     }
 
+    /* count trading days (Mon–Fri) strictly between a and b, assuming a <= b. */
+    private static int businessDaysBetween(LocalDate a, LocalDate b) {
+        int days = 0;
+        LocalDate d = a.plusDays(1);
+        while (!d.isAfter(b.minusDays(1))) {
+            if (isTradingDay(d)) days++;
+            d = d.plusDays(1);
+        }
+        return Math.max(0, days);
+    }
+
+    private static boolean isTradingDay(LocalDate d) {
+        return !isWeekend(d) && !isHoliday(d);
+    }
     private static boolean isWeekend(LocalDate d) {
         var w = d.getDayOfWeek();
-        return w == java.time.DayOfWeek.SATURDAY || w == java.time.DayOfWeek.SUNDAY;
+        return w == DayOfWeek.SATURDAY || w == DayOfWeek.SUNDAY;
     }
     private static LocalDate prevTradingDay(LocalDate d) {
-        while (isWeekend(d)) d = d.minusDays(1);
+        while (!isTradingDay(d)) d = d.minusDays(1);
         return d;
     }
     private static LocalDate nextTradingDay(LocalDate d) {
-        while (isWeekend(d)) d = d.plusDays(1);
+        while (!isTradingDay(d)) d = d.plusDays(1);
         return d;
     }
+    private static boolean isHoliday(LocalDate d) {
+        // fixed-date holidays
+        final Set<MonthDay> FIXED_HOLIDAYS = Set.of(
+                MonthDay.of(1, 1),   // New Year's Day
+                MonthDay.of(1, 9),   // Day of Mourning for Jimmy Carter (2025)
+                MonthDay.of(6, 19),  // Juneteenth
+                MonthDay.of(7, 4),   // Independence Day
+                MonthDay.of(12, 25)  // Christmas
+        );
+        for (MonthDay md : FIXED_HOLIDAYS) {
+            LocalDate actual = md.atYear(d.getYear());
+            LocalDate observed = switch (actual.getDayOfWeek()) {
+                case SATURDAY -> actual.minusDays(1);
+                case SUNDAY -> actual.plusDays(1);
+                default -> actual;
+            };
+            if (d.equals(observed)) return true;
+        }
 
+        // moving holidays
+        int y = d.getYear();
+        if (d.equals(nthWeekdayOfMonth(y, Month.JANUARY, DayOfWeek.MONDAY, 3))) return true;   // MLK Day
+        if (d.equals(nthWeekdayOfMonth(y, Month.FEBRUARY, DayOfWeek.MONDAY, 3))) return true;  // Presidents’ Day
+        if (d.equals(lastWeekdayOfMonth(y, Month.MAY, DayOfWeek.MONDAY))) return true;         // Memorial Day
+        if (d.equals(nthWeekdayOfMonth(y, Month.SEPTEMBER, DayOfWeek.MONDAY, 1))) return true; // Labor Day
+        if (d.equals(nthWeekdayOfMonth(y, Month.NOVEMBER, DayOfWeek.THURSDAY, 4))) return true;// Thanksgiving
+
+        // Good Friday
+        if (d.equals(easterSunday(y).minusDays(2))) return true;
+
+        return false;
+    }
+    private static LocalDate nthWeekdayOfMonth(int y, Month m, DayOfWeek dow, int n) {
+        LocalDate d = LocalDate.of(y, m, 1);
+        int shift = (dow.getValue() - d.getDayOfWeek().getValue() + 7) % 7;
+        return d.plusDays(shift + (n - 1) * 7L);
+    }
+    private static LocalDate lastWeekdayOfMonth(int y, Month m, DayOfWeek dow) {
+        LocalDate d = LocalDate.of(y, m, m.length(Year.isLeap(y)));
+        int shiftBack = (d.getDayOfWeek().getValue() - dow.getValue() + 7) % 7;
+        return d.minusDays(shiftBack);
+    }
+    private static LocalDate easterSunday(int y) {
+        int a = y % 19;
+        int b = y / 100, c = y % 100;
+        int d = b / 4, e = b % 4;
+        int f = (b + 8) / 25;
+        int g = (b - f + 1) / 3;
+        int h = (19 * a + b - d - g + 15) % 30;
+        int i = c / 4, k = c % 4;
+        int l = (32 + 2 * e + 2 * i - h - k) % 7;
+        int m = (a + 11 * h + 22 * l) / 451;
+        int month = (h + l - 7 * m + 114) / 31;
+        int day = ((h + l - 7 * m + 114) % 31) + 1;
+        return LocalDate.of(y, month, day);
+    }
 }
